feat: add reset and invert controls for tag filters

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@ title: "Blog"
 subtitle: "Thoughts & Updates"
 ---
 
+<div id="tag-controls" class="flex justify-center gap-4 mb-2"></div>
 <div id="tag-filter" class="flex flex-wrap gap-2 justify-center mb-6"></div>
 
 <main id="post-list" class="max-w-4xl mx-auto px-6 space-y-12">
