--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@ subtitle: "Image Collection"
 
 
 
+<script src="{{ '/assets/js/tag-ui.js' | relative_url }}"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function () {
   const rawData = [
@@ -98,65 +99,14 @@ document.addEventListener('DOMContentLoaded', function () {
   const filtersEl = document.getElementById('tag-filters');
   const controlsEl = document.getElementById('tag-controls');
 
-  const createBtn = (tag, label) => {
-    const b = document.createElement('button');
-    b.textContent = label || tag;
-    b.dataset.tag = tag;
-    b.className = 'tag-btn px-3 py-1 rounded-full bg-[#d7c49e] text-[#1e1e1e] text-sm';
-    return b;
-  };
-
-  Array.from(allTags)
-    .filter(t => t)
-    .sort()
-    .forEach(tag => filtersEl.appendChild(createBtn(tag)));
-
-  const resetBtn = createBtn('', 'Reset');
-  resetBtn.classList.add('font-semibold', 'bg-[#d7c49e]');
-  const invertBtn = createBtn('', 'Invert');
-  invertBtn.classList.add('font-semibold', 'bg-[#d7c49e]');
-  controlsEl.appendChild(resetBtn);
-  controlsEl.appendChild(invertBtn);
-
   const activeTags = new Set();
 
-  filtersEl.addEventListener('click', e => {
-    if (!e.target.dataset.tag) return;
-    const tag = e.target.dataset.tag;
-    if (activeTags.has(tag)) {
-      activeTags.delete(tag);
-      e.target.classList.remove('bg-[#e96f1f]', 'text-white');
-    } else {
-      activeTags.add(tag);
-      e.target.classList.add('bg-[#e96f1f]', 'text-white');
-    }
-    updateGallery();
-  });
-
-  resetBtn.addEventListener('click', () => {
-    activeTags.clear();
-    filtersEl.querySelectorAll('button').forEach(b =>
-      b.classList.remove('bg-[#e96f1f]', 'text-white')
-    );
-    updateGallery();
-  });
-
-  invertBtn.addEventListener('click', () => {
-    const newActive = new Set();
-    allTags.forEach(t => {
-      if (!activeTags.has(t)) newActive.add(t);
-    });
-    activeTags.clear();
-    filtersEl.querySelectorAll('button').forEach(b => {
-      const tag = b.dataset.tag;
-      if (newActive.has(tag)) {
-        activeTags.add(tag);
-        b.classList.add('bg-[#e96f1f]', 'text-white');
-      } else {
-        b.classList.remove('bg-[#e96f1f]', 'text-white');
-      }
-    });
-    updateGallery();
+  initTagUI({
+    tags: Array.from(allTags),
+    filtersEl,
+    controlsEl,
+    activeTags,
+    onChange: () => updateGallery()
   });
 
   const galleryEl = document.getElementById('gallery');
